# remul

./: .gitignore  Cargo.toml  README.MD  README_FR.MD  beq.elf  build.web.bat  index.css  index.html  package-lock.json  test1.elf  test1.o.elf  while.elf
.circleci/: config.yml
src/: ElfGaspard.rs  lib.rs  main.rs
src/ElfGaspard/: Decoder.rs
tests/: Makefile  While.S  beq.S  hardcode.py  linker.ld  output.rs  test1.S  test1.c
utils/: translate_readme.py
