[package]
name = "gaspard_emul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

elf = "0.7.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ['Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',] }
js-sys = "0.3.69"

[lib]
crate-type = ["cdylib", "rlib"]